Assessment session linking - to make sure that the answers in the shared question groups are properly duplicated only to one session from the other assessment type. For example - a Sales assessment is completed and the answers are copied to Marketing assessment for the overlapping questions. However when completing the next Sales assessment, the answers are no longer copied, before the previously started Marketing assessment is not completed. Also fixed a few other issues which might have caused a blank screen when finishing an assessment or viewing completed ones.

--- a/src/app/module-viewer/assessment-chart/assessment-chart.component.sass
+++ b/src/app/module-viewer/assessment-chart/assessment-chart.component.sass
@@ -33,7 +33,7 @@
                     text
                         font-size: 1.5em
                         fill: $green
-                        transform: translate(-15px, -10px)
+                        transform: translate(-8px, -10px)
 
                         &[text-anchor="end"]
                             fill: $red
